# AiFw

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Flow.md  README.md  Requirements.md  SECURITY.md  freebsd.plan.md  matrix.md  plan.md  working-plan.md
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-iso.yml  gh-pages.yml
aifw-ai/: Cargo.toml
aifw-ai/src/: features.rs  inference.rs  lib.rs  response.rs  tests.rs  types.rs
aifw-ai/src/detectors/: brute_force.rs  c2_beacon.rs  ddos.rs  dns_tunnel.rs  mod.rs  port_scan.rs
aifw-api/: Cargo.toml
aifw-api/src/: acme.rs  ai_analysis.rs  aliases.rs  auth.rs  backup.rs  backup_s3.rs  ca.rs  cluster.rs  dhcp.rs  dns_blocklists.rs  dns_resolver.rs  ids.rs  iface.rs  log_tail.rs  main.rs  metrics_series.rs  multiwan.rs  plugins.rs  reverse_proxy.rs  routes.rs  system.rs  tests.rs  time_service.rs  updates.rs  ws.rs
aifw-api/src/auth/: config.rs  jwt_key.rs  mod.rs  oauth.rs  password.rs  tokens.rs  totp.rs  ws_ticket.rs
aifw-api/src/opnsense/: importer.rs  mod.rs  parser.rs  tests.rs  types.rs
aifw-api/src/opnsense/test_fixtures/: medium.xml
aifw-cli/: Cargo.toml
aifw-cli/src/: commands.rs  main.rs
aifw-common/: Cargo.toml
aifw-common/src/: alias.rs  cluster_events.rs  error.rs  geoip.rs  ha.rs  ids.rs  lib.rs  multiwan.rs  nat.rs  permission.rs  ratelimit.rs  rule.rs  single_instance.rs  tests.rs  tls.rs  types.rs  vpn.rs
aifw-conntrack/: Cargo.toml
aifw-conntrack/src/: lib.rs  pflog.rs  query.rs  stats.rs  tests.rs  tracker.rs
aifw-core/: Cargo.toml
aifw-core/examples/: multiwan_chaos.rs
aifw-core/src/: acme.rs  acme_dns.rs  acme_engine.rs  acme_export.rs  alias.rs  audit.rs  config.rs  config_manager.rs  db.rs  ddns.rs  dns_blocklists.rs  engine.rs  geoip.rs  ha.rs  lib.rs  nat.rs  net_safety.rs  path_safety.rs  pf_tuning.rs  s3_backup.rs  shaping.rs  smtp_notify.rs  system_apply_helpers.rs  tests.rs  tls.rs  updater.rs  validation.rs  vpn.rs
aifw-core/src/multiwan/: gateway.rs  group.rs  instance.rs  leak.rs  mod.rs  policy.rs  preflight.rs  probe.rs  sla.rs
aifw-core/src/system_apply/: freebsd_helpers.rs  freebsd_impl.rs  mod.rs
aifw-core/tests/: freebsd_helpers.rs  system_apply_helpers.rs  system_apply_linux.rs
aifw-daemon/: Cargo.toml
aifw-daemon/src/: cluster_replicator.rs  health_prober.rs  main.rs  role_watcher.rs
aifw-ids/: Cargo.toml
aifw-ids-bin/: Cargo.toml
aifw-ids-bin/src/: handler.rs  main.rs
aifw-ids-ipc/: Cargo.toml
aifw-ids-ipc/src/: client.rs  framing.rs  lib.rs  proto.rs  server.rs
aifw-ids/src/: config.rs  lib.rs
aifw-ids/src/action/: mod.rs
aifw-ids/src/capture/: bpf.rs  mod.rs  netmap.rs  pcap.rs
aifw-ids/src/decode/: mod.rs
aifw-ids/src/detect/: mod.rs  multi_pattern.rs  threshold.rs
aifw-ids/src/flow/: mod.rs
aifw-ids/src/output/: eve.rs  memory.rs  mod.rs  sqlite.rs  syslog.rs
aifw-ids/src/protocol/: dns.rs  http.rs  mod.rs  smtp.rs  ssh.rs  tls.rs
aifw-ids/src/rules/: manager.rs  mod.rs  sigma.rs  suricata.rs  yara.rs
aifw-metrics/: Cargo.toml
aifw-metrics/src/: backend.rs  collector.rs  config.rs  lib.rs  ring.rs  series.rs  store.rs  tests.rs
aifw-pf/: Cargo.toml
aifw-pf/src/: backend.rs  error.rs  ioctl.rs  lib.rs  mock.rs  tests.rs  types.rs
aifw-plugins/: Cargo.toml
aifw-plugins/src/: context.rs  discovery.rs  examples.rs  hooks.rs  lib.rs  manager.rs  plugin.rs  tests.rs  wasm.rs
aifw-plugins/src/examples/: ip_reputation.rs  logging.rs  webhook.rs
aifw-setup/: Cargo.toml
aifw-setup/src/: apply.rs  config.rs  console.rs  hwdetect.rs  main.rs  tests.rs  totp.rs  tuning.rs  wizard.rs
aifw-tui/: Cargo.toml
aifw-tui/src/: app.rs  main.rs  ui.rs
aifw-ui/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
aifw-ui/src/app/: globals.css  layout.tsx  page.tsx
aifw-ui/src/app/about/: page.tsx
aifw-ui/src/app/acme/: page.tsx
aifw-ui/src/app/aliases/: page.tsx
aifw-ui/src/app/backup/: page.tsx
aifw-ui/src/app/blocked/: page.tsx
aifw-ui/src/app/ca/: page.tsx
aifw-ui/src/app/cluster/: page.tsx
aifw-ui/src/app/cluster/components/: StatusBanner.tsx
aifw-ui/src/app/connections/: page.tsx
aifw-ui/src/app/ddns/: Help.tsx  page.tsx
aifw-ui/src/app/dhcp/: page.tsx
aifw-ui/src/app/dns/: page.tsx
aifw-ui/src/app/geoip/: page.tsx
aifw-ui/src/app/ids/: page.tsx
aifw-ui/src/app/interfaces/: page.tsx
aifw-ui/src/app/login/: page.tsx
aifw-ui/src/app/logs/: page.tsx
aifw-ui/src/app/metrics/: page.tsx
aifw-ui/src/app/multi-wan/: lib.ts  page.tsx
aifw-ui/src/app/nat/: page.tsx
aifw-ui/src/app/plugins/: page.tsx
aifw-ui/src/app/profile/: page.tsx
aifw-ui/src/app/reboot/: page.tsx
aifw-ui/src/app/reverse-proxy/: page.tsx
aifw-ui/src/app/routes/: page.tsx
aifw-ui/src/app/rules/: page.tsx
aifw-ui/src/app/settings/: page.tsx
aifw-ui/src/app/threats/: page.tsx
aifw-ui/src/app/time/: page.tsx
aifw-ui/src/app/traffic/: page.tsx
aifw-ui/src/app/updates/: page.tsx
aifw-ui/src/app/users/: page.tsx
aifw-ui/src/app/vlans/: page.tsx
aifw-ui/src/app/vpn/: page.tsx
aifw-ui/src/components/: AppShell.tsx  AuthGuard.tsx  Card.tsx  DataTable.tsx  PendingBanner.tsx  Sidebar.tsx  StatusBadge.tsx
aifw-ui/src/context/: AuthContext.tsx  WsContext.tsx
aifw-ui/src/lib/: api.ts  permissions.ts  ports.ts  validate.ts
docs/: CNAME  README.md  _config.yml  compare.md  docs.md  features.md  ha.md  index.html  install.md  multi-wan.md  plugins.md  robots.txt  sitemap.xml
docs/_layouts/: default.html
docs/assets/: style.css
docs/superpowers/plans/: 2026-04-21-system-settings-basics.md  2026-04-26-process-hardening-and-ids-extraction.md  2026-04-28-ha-epic.md
docs/superpowers/specs/: 2026-04-21-system-settings-basics-design.md  2026-04-26-process-hardening-and-ids-extraction-design.md  2026-04-28-ha-epic-design.md
freebsd/: aifw-diag.sh  aifw-rescue.sh  build-iso.sh  build-local.sh  build-update.sh  deploy.sh  manifest.json  release.sh
scripts/: ha-verify.sh
(+58 files in other folders)
