[workspace]
members = [
    "aifw-common",
    "aifw-pf",
    "aifw-core",
    "aifw-conntrack",
    "aifw-plugins",
    "aifw-ai",
    "aifw-ids",
    "aifw-ids-bin",
    "aifw-ids-ipc",
    "aifw-metrics",
    "aifw-api",
    "aifw-tui",
    "aifw-daemon",
    "aifw-cli",
    "aifw-setup",
]
resolver = "2"

[workspace.package]
version = "5.88.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/ZerosAndOnesLLC/AiFw"

[workspace.dependencies]
aifw-common = { path = "aifw-common" }
aifw-pf = { path = "aifw-pf" }
aifw-core = { path = "aifw-core" }
aifw-conntrack = { path = "aifw-conntrack" }
aifw-plugins = { path = "aifw-plugins" }
aifw-ids = { path = "aifw-ids" }
aifw-ids-bin = { path = "aifw-ids-bin" }
aifw-ids-ipc = { path = "aifw-ids-ipc" }
aifw-metrics = { path = "aifw-metrics" }
aifw-api = { path = "aifw-api" }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header", "compression-gzip", "compression-br"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
ratatui = "0.30"
crossterm = "0.29"
nix = { version = "0.31", features = ["fs", "process", "socket"] }
