[package]
name = "aifw-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aifw-common = { workspace = true }
aifw-pf = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
