[package]
name = "aifw-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aifw-api"
path = "src/main.rs"

[dependencies]
aifw-common = { workspace = true }
aifw-pf = { workspace = true }
aifw-core = { workspace = true }
aifw-conntrack = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
axum-test = "17"
