[package]
name = "aifw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aifw"
path = "src/main.rs"

[dependencies]
aifw-common = { workspace = true }
aifw-core = { workspace = true }
aifw-pf = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
serde_yml = "0.0"
uuid = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
