[package]
name = "aifw-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
