[package]
name = "aifw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aifw-common = { workspace = true }
aifw-pf = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"
hex = "0.4"
cron = "0.12"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
