[package]
name = "aifw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aifw-common = { workspace = true }
aifw-pf = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"
hex = "0.4"
cron = "0.16"
anyhow = "1"
aws-config = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-route53 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
instant-acme = "0.7"
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

[dev-dependencies]
anyhow = "1"
