[package]
name = "aifw-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aifw-daemon"
path = "src/main.rs"

[dependencies]
aifw-common = { workspace = true }
aifw-pf = { workspace = true }
aifw-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
libc = "0.2"
nix = { version = "0.31", features = ["user"] }
chrono = { workspace = true }
uuid = { workspace = true }
