[package]
name = "aifw-ids-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aifw-ids"
path = "src/main.rs"

[dependencies]
aifw-common = { workspace = true }
aifw-ids = { workspace = true }
aifw-ids-ipc = { workspace = true }
aifw-pf = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
